# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
gendiff/: _diff.py  gendiff.py  io.py  parsing.py  tree.py  types.py  view.py
gendiff/scripts/: gendiff.py
gendiff/views/: __init__.py  json.py  plain.py  stylish.py
src/: main.py
tests/: fixture_paths.py  test_flat.py  test_generate_diff.py  test_json_diff.py  test_plain_diff.py  test_stylish_diff.py
tests/fixtures/diffs/: file1_empty.json.txt  file1_file2.json.txt
